# A3dp-Slicer

./: .clang-format  .gitignore  .gitmodules  BuildLinux.sh  BuildMacOS.sh  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  build_win.bat  create_release.py  version.inc
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  config
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  feature_request.md
.github/workflows/: ccpp-all.yml  ccpp_mac.yml  ccpp_mac_arm.yml  ccpp_mac_arm_debug.yml  ccpp_mac_arm_rc.yml  ccpp_mac_debug.yml  ccpp_mac_rc.yml  ccpp_ubuntu.yml  ccpp_ubuntu_debug.yml  ccpp_ubuntu_gtk3.yml  ccpp_ubuntu_gtk3_debug.yml  ccpp_ubuntu_gtk3_rc.yml  ccpp_ubuntu_rc.yml  ccpp_win.yml  ccpp_win_debug.yml  ccpp_win_deps.yml  ccpp_win_rc.yml  robtry  robtry.yml  test.yml
cmake/modules/: AddCMakeProject.cmake  FindTBB.cmake.in  FindwxWidgets.cmake
doc/: Dependencies.md  How to build - Linux et al.md  How to build - Mac OS.md  How to build - Windows.md  Localization_guide.md
lib/: Slic3r.pm
lib/Slic3r/: Config.pm  ExPolygon.pm  Geometry.pm  Layer.pm  Line.pm  Model.pm  Point.pm  Polygon.pm  Polyline.pm  Test.pm
resources/calibration/: es_introduction.html  introduction.html
resources/custom_gcodes/: before_layer_gcode  end_gcode  layer_gcode  rw_slicing_state  tcr_rotated_gcode  toolchange_gcode  universal
resources/data/: hints.ini
resources/localization/: PrusaSlicer.pot  README.md  list.txt  pom_merger.py  update_all.py
resources/profiles/: Anker.idx  Anker.ini  Anycubic.idx  Anycubic.ini  Artillery.idx  Artillery.ini  BIBO.idx  CocoaPress.ini  Creality.idx  Creality.ini  Elegoo.idx  Elegoo.ini  INAT.idx  INAT.ini  Jubilee.ini  LNL3D.ini  MakerGear.idx  MakerGear.ini  PrusaResearch.idx  PrusaResearch.ini  RatRig.ini  RatRig.ini.bak  Rigid3D.idx  Rigid3D.ini  Snapmaker.idx  Snapmaker.ini  Sovol.idx  TemplateFilaments.idx  TemplateFilaments.ini  Templates.idx  (+3 more)
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer_app_msvc.cpp
src/mesh_fix/: CMakeLists.txt  README.txt
src/mesh_fix/include/Kernel/: basics.h  coordinates.h  graph.h  heap.h  jqsort.h  list.h  point.h
src/mesh_fix/include/TMesh/: detectIntersections.h  edge.h  marchIntersections.h  tin.h  triangle.h
src/mesh_fix/src/Algorithms/: checkAndRepair.cpp  holeFilling.cpp  marchIntersections.cpp
src/mesh_fix/src/Kernel/: heap.cpp  jqsort.cpp  list.cpp  orientation.c  point.cpp  tmesh.cpp
src/mesh_fix/src/MeshFix/: meshfix.cpp
src/mesh_fix/src/TMesh/: edge.cpp  io.cpp  tin.cpp
src/occt_wrapper/: CMakeLists.txt  OCCTWrapper.cpp
src/test-utils/: CMakeLists.txt  stl_to_cpp.cpp
src/test-utils/ClipboardXX/include/: clipboardxx.hpp
src/test-utils/ClipboardXX/include/detail/linux/xcb/: xcb.hpp
t/: combineinfill.t  flow.t  gaps.t  gcode.t  geometry.t  perimeters.t  retraction.t  shells.t  thin.t
tests/: CMakeLists.txt  test_utils.hpp
tests/superslicerlibslic3r/: CMakeLists.txt  test_clipper_utils.cpp  test_complete_objects.cpp  test_data.cpp  test_data.hpp  test_dense_infill.cpp  test_denserinfill.cpp  test_extrusion_entity.cpp  test_fan_mover.cpp  test_fill.cpp  test_flow.cpp  test_gcodewriter.cpp  test_geometry.cpp  test_model.cpp  test_print.cpp  test_skirt_brim.cpp  test_thin.cpp
xs/: CMakeLists.txt
(+1307 files in other folders)
